# oauthenticator

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  RELEASE.md  cilogon-requirements.txt  cilogon_scope.md  github_scope.md  gitlab_scope.md  globus-requirements.txt  googlegroups-requirements.txt  jupyterhub_config.py  juypter_config.py  oauthenticator.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test-requirements.txt
.circleci/: README.md  config.yml
.github/: dependabot.yaml
.github/workflows/: publish.yml  release.yaml  test-docs.yaml  test.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: changelog.md  cilogon.md  conf.py  example-oauthenticator.py  extending.md  extending.rst  getting-started.md  getting-started.rst  github.md  gitlab.md  google.md  index.md  index.rst  install.md  migrations.md  specific-setup.md  writing-an-oauthenticator.md  writing-an-oauthenticator.rst
docs/source/api/: authenticator.rst.tpl  index.rst.tpl
docs/source/how-to/: custom-403.md  example-oauthenticator.py  refresh.md  writing-an-oauthenticator.md
docs/source/how-to/migrations/: upgrade-to-15.md  upgrade-to-16.md
docs/source/reference/: changelog.md
docs/source/reference/api/: authenticator.rst.tpl  index.rst  index.rst.tpl
docs/source/topic/: allowing.md  extending.md  github.md  gitlab.md  google.md
docs/source/tutorials/: general-setup.md  install.md  provider-specific-setup.md
docs/source/tutorials/oauth-providers-guides/: awscognito.md  azuread.md
docs/source/tutorials/provider-specific-setup/: index.md
docs/source/tutorials/provider-specific-setup/providers/: auth0.md  awscognito.md  azuread.md  bitbucket.md  cilogon.md  generic.md  github.md  gitlab.md  globus.md  google.md  mediawiki.md  oidc.md  okpy.md  openshift.md
example/: Dockerfile  README.md  env  jupyterhub_config.py
examples/auth_state/: README.md  gist-nb.ipynb  jupyterhub_config.py
examples/azuread/: run.sh  sample_jupyter_config.py  sample_jupyterhub_config_with_certificate.py
examples/azureadb2c/: config.py  run.sh
examples/full/: Dockerfile  README.md  env  jupyterhub_config.py
examples/generic/: README.md
examples/mock-provider/: README.md  jupyterhub_config.py
examples/templates/: 403.html
oauthenticator/: __init__.py  _version.py  auth0.py  awscognito.py  azuread.py  azureadb2c.py  azureadcert.py  bitbucket.py  canvas.py  cilogon.py  common.py  custos.py  feishu.py  generic.py  github.py  gitlab.py  globus.py  google.py  hydroshare.py  keycloak.py  lti13.py  mediawiki.py  moodle.py  multiauthenticator.py  multioauthenticator.py  oauth2.py  oidc.py  okpy.py  okta.py  openshift.py  orcid.py  traitlets.py  vsteamservices.py  yandex.py
oauthenticator/dev/: config.py  run.sh
oauthenticator/schemas/: cilogon-schema.yaml
oauthenticator/tests/: conftest.py  mocks.py  test_auth0.py  test_awscognito.py  test_azuread.py  test_bitbucket.py  test_canvas.py  test_cilogon.py  test_generic.py  test_github.py  test_gitlab.py  test_globus.py  test_google.py  test_keycloak.py  test_mediawiki.py  test_moodle.py  test_multiauthenticator.py  test_multioauthenticator.py  test_oauth2.py  test_oidc.py  test_okpy.py  test_okta.py  test_openshift.py  test_orcid.py  test_yandex.py
tests/: mocks.py  test_auth0.py  test_azuread.py  test_bitbucket.py  test_cilogon.py  test_generic.py  test_github.py  test_gitlab.py  test_globus.py  test_google.py  test_mediawiki.py  test_oauth2.py  test_okpy.py  test_openshift.py
